Fix build on java 11